Closed
Bug 91519
Opened 24 years ago
Closed 23 years ago
xpicleanup not run after Install.execute()
Categories
(Core Graveyard :: Installer: XPInstall Engine, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.5
People
(Reporter: jimmykenlee, Assigned: dveditz)
References
Details
(Keywords: regression)
Attachments
(1 file)
1.86 KB,
patch
|
Details | Diff | Splinter Review |
Build: 2001-07-18-04-0.9.2(LINUX)
1. From http://jimbob/trigger3.html, click on Acceptance drop-down and choose
a_exe_2_unix_block_false
2. Click on Trigger case button
3. Click OK button from Items to Install dialog
4. Dismiss alert dialog which is simply part of the test
5. From the terminal window, enter any number followed by Return key to complete
the remainder of test case
6. Exit browser
7. Check for any processes running (ps); none should be running
8. Launch the browser
RESULT:
Dialog appears "The program must close to allow a previous installation attempt
to complete. Please restart." Dismissing this dialog and checking running
processes reveals that xpicleanup is now running. It did not start until I
attempted to launch the browser. User must kill this process in order to launch
browser again.
EXPECTED RESULT:
Browser launches. Xpicleanup should not be running.
Nominating! This may be a duplicate of another bug, but I can't find it. I
don't think it matters what executable is run from the xpi test case. But it's
clear that it has to be an executable versus just any other API.
We need to have this fixed. I believe that any third party installer that is
launched from the browser would run into this problem. This would leave users
with the inability to launch their browsers until killing the xpicleanup
process. It's not clear to me what the consequences are by not letting
xpicleanup complete, but it appears that it doesn't complete anytime.
Keywords: nsbeta1,
regression
It sure does sound the same. I'll check the build with Dan's fix. I'll update
here with what I find out.
Assignee | ||
Comment 4•24 years ago
|
||
This is not bug 84896. That bug involved Mozilla and the utility playing
timeout-cycle chicken, but the utility *was* launched at Mozilla shutdown.
When we launch Mozilla and it finds a xpicleanup.dat file it will launch a copy
of the utility just in case the machine crashed and left the utility not
running. That part of the behavior is correct (so that after you shutdown and
restart in response to the dialog you will be OK).
Apparently the utility is only launched at shutdown if there are
pending replaces, it should also launch if there are pending deletes.
This may not be a blocker, since once people get that message and
restart yet again (annoying to be sure) they should be good to go.
Summary: xpicleanup launches when attempting to launch browser → xpicleanup not run after Install.execute()
Update! For today's build, the behavior is the same.
After exiting the browser, there is a need to cleanup from /tmp the executable
called from the test case. But xpicleanup is not being launched after exiting.
The xpicleanup.dat is visible in the directory.
Launching the browser appears to also launch xpicleanup. The executable from
/tmp is removed which is desirable. But xpicleanup remains as a running
process. xpicleanup.dat still remains in the directory.
When I first read the dialog message, I interpreted "restart" as relaunching the
browser. Running on Linux, I don't expect to have to "reboot" my entire system.
No other application that I have installed requires such strong requirements.
Does this apply to all those who install the Java plugin?
If we don't fix this, then this is a release note candidate.
This should be cross platform. Change OS to ALL.
OS: Linux → All
Assignee | ||
Comment 7•24 years ago
|
||
On windows -turbo mode is an additional complication. Since we didn't set the
flag to run xpicleanup at shutdown we also don't go through the code to turn off
-turbo. Unless Mozilla crashes (killing turbo) xpicleanup.dat will just sit
there until they reboot the system, and then they'll get the warning dialog.
That might confuse them a bit, especially if the install supposedly still in
progress was something they did last Friday and this is Monday morning back at work.
We need to fix this for 0.9.4 -- it's trivial anyway.
Assignee: syd → dveditz
Assignee | ||
Comment 8•23 years ago
|
||
Fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Build: 2001-08-17-06-trunk(WIN), 2001-08-17-08-trunk(MAC)
For Windows and no turbo, all is well.
For Windows with turbo, xpicleanup.dat and the xpinstall.exe from the Temp dir
are not removed after exiting the browser. The browser can be launched without
any error dialogs, but xpicleanup.dat and xpinstall.exe still are present.
For Mac, XPICleanup Data from Essential Files and the executable from Temporary
Files are not removed after exiting the browser. Launching the browser displays
dialog showing "The program must close to allow a previous installation attempt
to complete. Please restart." Dismissing the dialog appears to then run
XPICleanup since XPICleanup Data from Essential Files and the executable from
Temporary Files are removed.
No usuable Linux build today.
Reopening bug regardless of Linux result since Windows and Mac already are
incomplete.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Comment 10•23 years ago
|
||
*** Bug 95761 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 11•23 years ago
|
||
Assignee | ||
Comment 12•23 years ago
|
||
Oops, forgot to fix the -turbo check. The patch will solve the -turbo problems.
I don't understand why the Mac is doing what you see, I may need to play with
your machine.
Assignee | ||
Comment 13•23 years ago
|
||
Checked in additional fixes so this case also shuts down -turbo mode.
Assignee | ||
Updated•23 years ago
|
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 15•23 years ago
|
||
Never got an answer about Mac or Linux, but windows is fixed.
Reporter | ||
Comment 16•23 years ago
|
||
Build: 2001-09-05-10-trunk(WIN), 2001-09-05-08-trunk(MAC),
2001-09-05-08-trunk(LINUX)
Looks good on all platforms now. Turbo mode is supported. Marking Verified.
Status: RESOLVED → VERIFIED
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•