bug 91519 not cleaning up temp file after running an executable (e.g. the dreaded 'incomplete message after JRE install' bug)